--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_text_kit: ^4.2.2
   logger: ^1.4.0
-
+  audioplayers: ^4.1.0
+  flutter_native_splash: ^2.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,7 +63,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/dip_cover.jpeg
+    - assets/images/dip_cover.jpeg
+    - assets/audios/dip-beut-tlk.webm
+    - assets/audios/freeze-rael.webm
+    - assets/audios/leys-si-cetait-le-dernier.webm
+    - assets/audios/reptyle-music-weet.mp3
   #   - images/a_dot_burr.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
