--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/dip_cover.jpeg
+    - assets/images/leys.jpeg
+    - assets/images/freeze.jpeg
+    - assets/images/reptyle-music.jpeg
+
+    # audios
     - assets/audios/dip-beut-tlk.webm
     - assets/audios/freeze-rael.webm
     - assets/audios/leys-si-cetait-le-dernier.webm
