--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    # images
+    - assets/images/defaultImage.webp
     - assets/images/dip_cover.jpeg
+    - assets/images/wall-texture-background.jpg
     - assets/images/leys.jpeg
     - assets/images/freeze.jpeg
     - assets/images/reptyle-music.jpeg
